--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     /*  basic colors  */
     --color-black: #2a3132;
-    --color-blue-1: #336b87;
+    --color-blue-1: #35775c;
     --color-blue-2: #90afc5;
     --color-gray-1: #f2f2f2;
     --color-gray-2: #cbcbcb;
